Edit .gitignore for VSCode settings, add independance of ticks between questions

--- a/.gitignore
+++ b/.gitignore
@@ -140,4 +140,7 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# VS Code settings
+.vscode/
+
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Python
