--- a/.gitignore
+++ b/.gitignore
@@ -78,9 +78,6 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# pyenv 
-.python-version
-
 # IPython
 profile_default/
 ipython_config.py
@@ -88,7 +85,7 @@ ipython_config.py
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -144,3 +141,6 @@ cython_debug/
 .vscode/
 
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Python
+
+# Experiments folder
+experiments/
